# PawnPassant

./: .gitignore  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  activate_env.ps1  deactivate_env.ps1  dev-dairy.md  devdairy.md  pyproject.toml  requirements.txt  test_path.py
.github/workflows/: auto-release-on-version-bump.yml  build-stockfish-android.yml  release-build.yml
assets/stockfish/: NOTICE.txt
scripts/: __init__.py  build_stockfish_android.sh  download_asset.py  fetch_stockfish_android.py  prepare_android_engine.py
scripts/ci/: __init__.py  release_metadata.py
src/: Constants.py  app.py  example_drag_and_drop.py  main.py
src/Core/: Clock.py  Engine.py  Game.py  MoveType.py
src/Ui/: Gui.py  app.py  board.py  chess_piece.py  clockui.py  square.py  timeControl.py  time_control.py
src/app/: gui.py
src/core/: __init__.py  binary_verifier.py  bot_manager.py  clock.py  difficulty_presets.py  download_manager.py  engine.py  engine_download.py  engine_manager.py  engine_verify.py  game.py  lc0_config.py  movetype.py  stockfish_config.py  weights_downloader.py
src/ui/: __init__.py  app.py  board.py  captured_pieces.py  chess_piece.py  clockui.py  engine_setup_panel.py  home.py  home_page.py  invisible_square.py  layout.py  layout_templates.py  log_viewer_dialog.py  online_setup_panel.py  piece_capture_animator.py  routing.py  settings_page.py  setup_overlay.py  square.py  stockfish_setup_panel.py  task_toast.py
src/utils/: __init__.py  captured_pieces_model.py  constants.py  dialogs.py  events.py  game_state.py  lifecycle.py  log_collector.py  logging_config.py  models.py  paths.py  settings.py  signals.py  system.py
tests/: conftest.py  fuzz_test_app_settings.py  fuzz_test_clock_state.py  fuzz_test_game_state.py  fuzz_test_layout.py  helpers.py  property_strategies.py  property_test_constants.py  property_test_game_state.py  property_test_home_page.py  property_test_layout.py  property_test_models.py  property_test_settings.py  test_app.py  test_binary_verifier.py  test_board.py  test_bot_manager.py  test_captured_pieces.py  test_captured_pieces_model.py  test_chess_piece.py  test_clock.py  test_clockui.py  test_constants.py  test_dialogs.py  test_difficulty_presets.py  test_download_manager.py  test_drag_target_special_moves_ui.py  test_engine.py  test_events_extended.py  test_game_endings.py  test_game_state.py  test_home_page.py  test_interaction_feedback_ui.py  test_invalid_move_ui.py  test_layout.py  test_lifecycle.py  test_models.py  test_movetype.py  test_promotion_overlay_ui.py  test_release_metadata.py  (+9 more)
