[project]
name = "pawnpassant"
version = "v0.4.2-alpha"
description = "A cross-platform chess game with full rules enforcement, chess clock, and Leela Chess Zero AI, built with Flet."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Sakth1" }
]
dependencies = [
    "flet>=0.85.3",
    "chess>=1.11.2",
]

[dependency-groups]
dev = [
    "flet-cli>=0.85.3",
    "flet-desktop>=0.85.3",
    "flet-web>=0.85.3",
    "pytest>=9.0.3",
]

[tool.flet]
org = "com.mycompany"
product = "Pawn Passant"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"
source_packages = ["chess"]

[tool.flet.android]
permissions = ["android.permission.INTERNET"]
split_per_abi = false
compile_packages = true
dependencies = [
    "chess>=1.11.2",
]

[tool.flet.app]
path = "src"

[tool.pawnpassant.release]
binary_name = "Pawn-Passant"

# ── Android engine setup ─────────────────────────────────────────────
# Lc0 is NOT bundled in the APK. The engine binary and neural network
# weights are downloaded at runtime from GitHub and lczero.org
# respectively, under user control via the in-app download UI.
#
# On Android the Lc0 APK release contains liblc0.so + libopenblas.so
# which are extracted to the app data directory and executed with
# LD_LIBRARY_PATH pointing at the same directory.

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "N"]  # errors, pyflakes, naming

# Optional but useful
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
